<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/emoticonSelection"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmoticonSelection">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/emoticonTextView"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/LinLayoutView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/firstImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/airplay"
                android:contentDescription="@string/firstImage"/>

            <ImageButton
                android:id="@+id/secondImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/anchor"
                android:contentDescription="@string/secondImage"/>

            <ImageButton
                android:id="@+id/thirdImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bike_scooter"
                android:contentDescription="@string/thirdImage"/>

            <ImageButton
                android:id="@+id/fourthImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/biotech"
                android:contentDescription="@string/fourthImage"/>

            <ImageButton
                android:id="@+id/fiveImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/backpack"
                android:contentDescription="@string/fiveImage"/>

            <ImageButton
                android:id="@+id/sixhImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/money"
                android:contentDescription="@string/sixImage"/>

            <ImageButton
                android:id="@+id/sevenImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/backup"
                android:contentDescription="@string/sevenImage"/>

            <ImageButton
                android:id="@+id/eightImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/bedtime"
                android:contentDescription="@string/eightImage"/>

            <ImageButton
                android:id="@+id/nineImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/elderly"
                android:contentDescription="@string/nineImage"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>